--- a/resources/css/contact.css
+++ b/resources/css/contact.css
@@ -1,4 +1,3 @@
-/* CSS riêng cho trang Contact */ 
 .contact-banner {
     background-image: url('http://localhost:8000/assets/img1/haha.jpg');
     background-size: cover;
@@ -7,23 +6,21 @@
     position: relative;
     overflow: visible;
   }
-.contact-banner .overlay {
+
+.contact-banner h1 {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1;
-}
-
-.contact-banner h1 {
     color: white;
     font-size: 60px;
     font-weight: 700;
     text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
+    z-index: 2;
+    margin: 0;
 }
 
 /* Ảnh brush viền dưới */
