--- a/resources/css/welcome.css
+++ b/resources/css/welcome.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .hh {
   width: 100%;
   max-width: 100vw;
@@ -72,8 +76,7 @@
 }
 
 /* Text trong ảnh */
-.destination-card h5,
-.destination-card .text-warning {
+.destination-card h5 {
   transition: color 0.3s ease, transform 0.3s ease;
 }
 
@@ -87,7 +90,7 @@
 .destination-card:hover .text-warning {
   color: #ffffff;
   /* trắng */
-  transform: scale(1.1);
+
 }
 
 /* --------------------------------------------------------------------------------------- */
