--- a/resources/css/auth.css
+++ b/resources/css/auth.css
@@ -7,6 +7,8 @@
 @import './explore.css';
 @import './admin.css';
 @import './detail.css';
+@import './tour.css';
+@import './tourdetail.css';
 
 
 /* --------------------------------------------------------------------------------- */
@@ -35,26 +37,33 @@ body {
     flex-direction: column;
     overflow-y: auto;
     overflow-x: hidden;
-    scrollbar-width: none; /* Firefox */
-    -ms-overflow-style: none; /* IE 10+ */
+    scrollbar-width: none;
+    /* Firefox */
+    -ms-overflow-style: none;
+    /* IE 10+ */
 }
 
 .sidebar::-webkit-scrollbar {
-    width: 0px; /* Chrome/Safari */
-    height: 0px; /* Ẩn luôn thanh cuộn ngang */
+    width: 0px;
+    /* Chrome/Safari */
+    height: 0px;
+    /* Ẩn luôn thanh cuộn ngang */
     background: transparent;
 }
 
 .sidebar:hover {
     width: 280px;
     background: rgba(255, 255, 255, 0.15);
-    scrollbar-width: thin; /* Firefox */
-    scrollbar-color: #bdbdbd #f5f5f5; /* Firefox */
+    scrollbar-width: thin;
+    /* Firefox */
+    scrollbar-color: #bdbdbd #f5f5f5;
+    /* Firefox */
 }
 
 .sidebar:hover::-webkit-scrollbar {
     width: 8px;
-    height: 0px; /* Không hiện thanh cuộn ngang khi hover */
+    height: 0px;
+    /* Không hiện thanh cuộn ngang khi hover */
     background: #f5f5f5;
 }
 
