sửa page queries, thêm thông báo khi filter biển và tour khi k tìm thấy

--- a/resources/css/auth.css
+++ b/resources/css/auth.css
@@ -9,6 +9,7 @@
 @import './detail.css';
 @import './tour.css';
 @import './tourdetail.css';
+@import './queries.css';
 
 
 /* --------------------------------------------------------------------------------- */
