--- a/resources/css/guest.css
+++ b/resources/css/guest.css
@@ -9,6 +9,7 @@
 @import './detail.css';
 @import './tour.css';
 @import './tourdetail.css';
+@import './queries.css';
 
 /* Custom CSS ở đây nếu muốn */
 body {
