--- a/resources/css/guest.css
+++ b/resources/css/guest.css
@@ -16,6 +16,11 @@ body {
   background-color: #f8f9fa;
 }
 
+.container-custom {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
 
 /* --------------------------------------------------------------------------------------- */
 /* css phần media */
