fix all UI : user

--- a/resources/css/auth.css
+++ b/resources/css/auth.css
@@ -446,7 +446,7 @@ body {
     color: rgba(255, 255, 255, 0.6) !important;
 }
 
-.footer-subscribe-form .form-control {
+.footer-booking-form .form-control {
     border-radius: 4px;
     /* Bo tròn input */
     border: none;
@@ -454,9 +454,8 @@ body {
     font-size: 0.9rem;
 }
 
-.footer-subscribe-form .btn-subscribe {
+.footer-booking-form .btn-subscribe {
     background-color: #e84133;
-    /* Màu nút subscribe */
     border-color: #e84133;
     color: #fff;
     font-weight: bold;
@@ -464,10 +463,10 @@ body {
     transition: background-color 0.3s ease;
 }
 
-.footer-subscribe-form .btn-subscribe:hover {
-    background-color: #c83125;
+.footer-booking-form .btn-subscribe:hover {
+    background-color: #c83125 !important;
     /* Màu hover nút subscribe */
-    border-color: #c83125;
+    border-color: #c83125 !important;
 }
 
 .btn-link:hover {
